--- a/requirements_py311.txt
+++ b/requirements_py311.txt
@@ -33,7 +33,7 @@ google-auth==2.36.0
 google-generativeai==0.8.3
 googleapis-common-protos==1.65.0
 grpcio-status==1.67.1
-grpcio==1.67.1
+grpcio==1.74.0
 h11==0.14.0
 hiredis==3.0.0
 httpcore==1.0.6
@@ -54,18 +54,18 @@ matplotlib==3.9.2
 mdurl==0.1.2
 numpy==2.1.3
 openai==1.54.3
-opentelemetry-api==1.28.1
-opentelemetry-exporter-otlp-proto-common==1.28.1
-opentelemetry-exporter-otlp-proto-http==1.28.1
-opentelemetry-instrumentation==0.49b1
-opentelemetry-proto==1.28.1
-opentelemetry-sdk==1.28.1
-opentelemetry-semantic-conventions==0.49b1
+opentelemetry-api==1.36.0
+opentelemetry-exporter-otlp-proto-common==1.36.0
+opentelemetry-exporter-otlp-proto-http==1.36.0
+opentelemetry-instrumentation==0.57b0
+opentelemetry-proto==1.36.0
+opentelemetry-sdk==1.36.0
+opentelemetry-semantic-conventions==0.57b0
 orjson==3.10.11
-packaging==24.2
+packaging==25.0
 pillow==11.0.0
 proto-plus==1.25.0
-protobuf==5.28.3
+protobuf==5.29.5
 pyasn1-modules==0.4.1
 pyasn1==0.6.1
 pydantic-core==2.23.4
@@ -113,3 +113,4 @@ scikit-learn==1.5.1
 seaborn==0.13.2
 networkx==3.3
 torch==2.4.1
+xai-sdk==1.1.0
